test/files/neg/t5106.check
t5106.scala:3: error: type mismatch;
 found   : 4.type (with underlying type Int)
 required: String
    val (n, l): (String, Int) = (4, "")
                                 ^
t5106.scala:3: error: type mismatch;
 found   : "".type (with underlying type String)
 required: Int
    val (n, l): (String, Int) = (4, "")
                                    ^
two errors found
